# RAG-Implementation

./: pyproject.toml  query.py  requirements.txt
data/textfiles/: cloud.txt  devops.txt  python_intro.txt
data/vectorstore/: chroma.sqlite3
notebook/: document.ipynb
