[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=4.2.0",
    "langchain-text-splitters>=1.1.0",
    "pikepdf>=10.3.0",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
]
